RESOLVED FIXED16701
REGRESSION(r27865): URL-encoded space (%20) in livejournal url causes page load error
https://bugs.webkit.org/show_bug.cgi?id=16701
Summary REGRESSION(r27865): URL-encoded space (%20) in livejournal url causes page lo...
Cameo Wood
Reported 2008-01-01 19:04:49 PST
Steps to reproduce: 1. Log into any livejournal account, make sure you are logged in (u:webkittest p:test1234) 2. Open http://cameo.livejournal.com/friends/test%20page 3. You will see: "Safari can’t open the page. Safari can’t open the page “http://cameo.livejournal.com/friends/test%20page”. The error was: “unknown error” (CFURLErrorDomain:302) Please choose Report Bugs to Apple from the Help menu, note the error number, and describe what you did before you saw this message." 4. If you hit "reload" or 'F5' the page will also properly load. Notes: This page fails to open when you open a new tab or new window even if the page is properly loaded in safari in another tab or page. This only occurs when you are logged in. I am running the latest nightly and 3.0.5
Attachments
proposed fix (4.04 KB, patch)
2008-01-06 08:19 PST, Alexey Proskuryakov
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2008-01-02 08:40:12 PST
Works okay with WebKit nightly r29079 with Safari 3.0.4 (5523.10.6) on Mac OS X Server 10.5.1 (9B18). Also works fine with a local debug build of WebKit r29078 with Safari 3.0.4 (523.12.2) on Mac OS X 10.4.11 (8S165). Confirmed with WebKit nightly r28899 with Safari 3.0.4 (523.15) on Windows XP SP2. Works fine with Safari 3.0.4 (523.15) with released WebKit, so this appears to be a WebKit regression.
David Kilzer (:ddkilzer)
Comment 2 2008-01-02 08:43:30 PST
Alexey Proskuryakov
Comment 3 2008-01-06 08:19:09 PST
Darin Adler
Comment 4 2008-01-06 11:21:16 PST
Comment on attachment 18301 [details] proposed fix r=me
Alexey Proskuryakov
Comment 5 2008-01-06 11:33:50 PST
Committed revision 29210.
Note You need to log in before you can comment on or make changes to this bug.