        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=16701
        <rdar://problem/5666580> REGRESSION: URL-encoded space (%20) in livejournal url
        causes page load error

        Test: http/tests/misc/location-with-space.php

        * platform/network/cf/ResourceRequestCFNet.cpp:
        (WebCore::ResourceRequest::doUpdatePlatformRequest): Do update its URL, too.



Canonical link: https://commits.webkit.org/23048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29210 268f45cc-cd09-0410-ab3c-d52691b4dbfc