LayoutTests/http/tests/misc/location-with-space.php
@@ -1,0 +1,4 @@
+<?php
+  header('HTTP/1.0 302 Found');
+  header('Location: resources/a success.html');
+?>
